# aivas

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
aivas/: __init__.py  __main__.py  cli.py  config.py  correlator.py  formatting.py  history.py  parser.py  reporter.py  scorer.py
aivas/commands/: ask_cmd.py  doctor_cmd.py  history_cmds.py  interactive_cmd.py  report_cmd.py  scan_cmd.py
aivas/database/: __init__.py  cpe_query.py  kev.py  nvd_ingest.py  nvd_sync.py  schema.py
aivas/narrator/: __init__.py  intent.py  narrator.py  providers.py
aivas/prober/: __init__.py  endpoints.py  headers.py  methods.py
aivas/scanner/: __init__.py  nse.py  orchestrator.py  probe.py  ssh_probe.py
aivas/server/: chat_api.py  main.py  report_gen.py  report_helpers.py  report_pdf.py  scan_worker.py
aivas/templates/: report.html.j2
aivas/tui/: __init__.py  ai.py  app.py  colors.py  commands.py  handlers.py  input_actions.py  kev_sync.py  progress.py  scan.py  screens.py
docs/superpowers/specs/: 2026-06-05-aivas-roadmap-and-status.md
docs/test-results/: tui-checklist.md
frontend/: index.html
notebooks/: nvd_analysis.ipynb
tests/: conftest.py  test_ask.py  test_cli.py  test_cli_scan.py  test_colors.py  test_config.py  test_correlator.py  test_correlator_os.py  test_cpe_query.py  test_formatting.py  test_history.py  test_history_cmds.py  test_kev.py  test_narrator.py  test_narrator_providers.py  test_nse.py  test_nvd_ingest.py  test_nvd_sync.py  test_parser.py  test_probe.py  test_prober.py  test_report_cmd.py  test_reporter.py  test_scanner_orchestrator.py  test_schema.py  test_scorer.py  test_ssh_probe.py  test_tui_checklist.py
tests/server/: conftest.py  test_endpoints.py  test_scan_worker.py
