[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aivas"
version = "0.1.0"
description = "AI-Assisted Network Vulnerability Assessment System — offline CVE scanning, bilingual risk narration, Textual TUI"
authors = [
    { name = "Baraka Malila", email = "bmalila87@gmail.com" },
    { name = "Michael Megewa" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["security", "vulnerability", "nmap", "cve", "network", "cli", "swahili"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "requests>=2.31",
    "python-nmap>=0.7",
    "groq>=0.9",
    "ollama>=0.2",
    "jinja2>=3.1",
    "weasyprint>=60.0",
    "packaging>=23.0",
    "paramiko>=3.0",
    "nvdlib>=0.7",
    "textual>=0.80",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Baraka-Malila/aivas"
Repository = "https://github.com/Baraka-Malila/aivas"

[project.scripts]
aivas = "aivas.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "responses>=0.25",
]
notebook = [
    "jupyter>=1.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]
